--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.22.0",
     "next": "16.1.1",
     "next-sanity": "^11.6.12",
+    "pdfjs-dist": "^3.4.120",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
