--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf-viewer/zoom": "^3.12.0",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.22.0",
+    "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^11.0.0",
     "next": "16.1.1",
     "next-sanity": "^11.6.12",
