--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
+    "@sanity/export": "^6.0.5",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.22.0",
     "@vercel/speed-insights": "^1.3.1",
